--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -25,8 +25,10 @@ a:hover {
 body {
   margin: 0;
   display: flex;
-  place-items: center;
-  min-width: 320px;
+  flex: 1;
+  align-items: center;
+  justify-content: center;
+  min-width: 100vw;
   min-height: 100vh;
 }
 
